feat: added filtering by users role
